--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-header>
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">CONFIGURAÇÕES</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
-</ion-content>
+<ion-item>
+    <ion-icon name="cellular-outline"></ion-icon>
+    <ion-label> DADOS MOVEIS</ion-label>
+    <ion-toggle ></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="cloud-download-outline"></ion-icon>
+    <ion-label> ECONOMIA DE DADOS</ion-label>
+    <ion-toggle></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="finger-print-outline"></ion-icon>
+    <ion-label> BIOMETRIA</ion-label>
+    <ion-toggle ></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="trash-outline"></ion-icon>
+    <ion-label> LIMPAR CACHE AUTOMATICO</ion-label>
+    <ion-toggle></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="trash-outline"></ion-icon>
+    <ion-label> POLITICA DE PRIVACIDADE</ion-label>
+    <ion-toggle ></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-label> VERSÃO 1.0</ion-label>
+  </ion-item>
+  
